--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon --config nodemon.json src/index.ts",
-    "task1": "nodemon --config nodemon.json src/homework1/task1.1/index.ts"
+    "task1": "nodemon --config nodemon.json src/homework1/task1.1/index.ts",
+    "task2": "nodemon --config nodemon.json src/homework1/task1.2/index.ts"
   },
   "keywords": [],
   "author": "",
@@ -15,5 +16,8 @@
     "nodemon": "^2.0.7",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.3"
+  },
+  "dependencies": {
+    "csvtojson": "^2.0.10"
   }
 }
