--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "task1": "nodemon --config nodemon.json src/homework1/task1.1/index.ts",
     "task2": "nodemon --config nodemon.json src/homework1/task1.2/index.ts",
     "task3_1": "babel-node -- src/homework1/task1.3/task1.js",
-    "task3_2": "babel-node -- src/homework1/task1.3/task2.js"
+    "task3_2": "babel-node -- src/homework1/task1.3/task2.js",
+    "homework2": "nodemon —config nodemon.json src/homework2/index.ts"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +20,7 @@
     "@babel/core": "^7.13.10",
     "@babel/node": "^7.10.5",
     "@babel/preset-env": "^7.13.12",
+    "@types/express": "^4.17.11",
     "@types/node": "^14.14.35",
     "@typescript-eslint/eslint-plugin": "^4.20.0",
     "@typescript-eslint/parser": "^4.20.0",
@@ -33,6 +35,7 @@
     "typescript": "^4.2.3"
   },
   "dependencies": {
-    "csvtojson": "^2.0.10"
+    "csvtojson": "^2.0.10",
+    "express": "^4.17.1"
   }
 }
